--- a/log4j.properties
+++ b/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.RollingAppenderU.layout.ConversionPattern=[%p] %d %c %M - %m%n
 # By default, everything goes to console and file
 log4j.rootLogger=INFO, RollingAppender, myConsoleAppender
 
-log4j.logger.app.task.ProcessBusinessInfo.scala=DEBUG, myConsoleAppender
+log4j.logger.app.task.ProcessBusinessInfo=DEBUG, myConsoleAppender
 #log4j.additivity.foo.bar.Baz=false
 
 # My custom logging goes to another file
